bugfix/1254: -- increased error space for displaying (avoiding overlapping);

--- a/src/app/pages/accounts/pages/add-credit-card/add-credit-card.component.scss
+++ b/src/app/pages/accounts/pages/add-credit-card/add-credit-card.component.scss
@@ -11,7 +11,7 @@
   }
 
   &__input-wrapper {
-    margin-bottom: 35px;
+    margin-bottom: 45px;
     display: block;
 
     &:first-child {
